samples/_failures_safe/1761127750_7dc481_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_344543d0.c: In function ‘hex_to_byte’:
./samples/SAFE/__tmp_344543d0.c:119:9: error: expected expression at end of input
  119 |         if (
      |         ^~
./samples/SAFE/__tmp_344543d0.c:119:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_344543d0.c:119:9: error: expected declaration or statement at end of input
